// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra inline stle without import StyleSheet 1`] = `
"import { StyleSheet as _StyleSheet } from 'react-native';

const Hello = () => <View style={ai._45ed256f}>
        <Text style={styles.text}>hello world</Text>      
      </View>;

const ai = _StyleSheet.create({
  _45ed256f: { flex: 1, backgroundColor: 'red' }
});"
`;

exports[`extra inline style with import StyleSheet 1`] = `
"
import { StyleSheet } from 'react-native';

const Hello = () => <View style={ai._45ed256f}>
      <Text style={styles.text}>hello world</Text>      
    </View>;
const ai = StyleSheet.create({
  _45ed256f: { flex: 1, backgroundColor: 'red' }
});"
`;

exports[`extra inline style with import StyleSheet and multiple style 1`] = `
"
import { StyleSheet } from 'react-native';

const Hello = () => <View style={ai._45ed256f3c}>
      <Text style={styles.text}>hello world</Text>      
      <Text style={[styles.text, ai._bbb3854cf5]}>hello world</Text>      
    </View>;
const ai = StyleSheet.create({
  _45ed256f3c: { flex: 1, backgroundColor: 'red' },
  _bbb3854cf5: { color: 'yellow', fontSize: 12 },
  _bbb3854cf5: { color: 'yellow', fontSize: 12 }
});"
`;
